--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
 	<properties>
 		<spring.version>3.0.5.RELEASE</spring.version>
+		<spring.amqp.version>1.0.0.RELEASE</spring.amqp.version>
 	</properties>
 
 	<build>
@@ -77,6 +78,18 @@
 			<version>${spring.version}</version>
 		</dependency>
 		
+		<dependency>
+  			<groupId>org.springframework.amqp</groupId>
+  			<artifactId>spring-amqp</artifactId>
+  			<version>${spring.amqp.version}</version>
+		</dependency>
+
+		<dependency>
+  			<groupId>org.springframework.amqp</groupId>
+  			<artifactId>spring-rabbit</artifactId>
+  			<version>${spring.amqp.version}</version>
+		</dependency>
+		
 		<!-- mongodb java driver -->
 		<dependency>
 			<groupId>org.mongodb</groupId>
@@ -95,6 +108,7 @@
 			<artifactId>cglib</artifactId>
 			<version>2.2</version>
 		</dependency>
+		
 		<!-- Log4j -->
 		<dependency>
 		    <groupId>log4j</groupId>
