--- a/pom.xml
+++ b/pom.xml
@@ -116,5 +116,12 @@
 		    <version>1.2.9</version>
 		</dependency>
 		
+		<!-- Gson -->
+		<dependency>
+	      <groupId>com.google.code.gson</groupId>
+	      <artifactId>gson</artifactId>
+	      <version>2.1</version>
+	    </dependency>
+		
 	</dependencies>
 </project>
