--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,19 +6,19 @@
 	<display-name>Spring Web MVC Application</display-name>
 
 	<servlet>
-		<servlet-name>mvc-dispatcher</servlet-name>
+		<servlet-name>rino</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>mvc-dispatcher</servlet-name>
+		<servlet-name>rino</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/mvc-dispatcher-servlet.xml</param-value>
+		<param-value>/WEB-INF/rino-servlet.xml</param-value>
 	</context-param>
 
 	<listener>
