--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<encoding>UTF-8</encoding>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<spring.amqp.version>1.0.0.RELEASE</spring.amqp.version>
 	</properties>
